2006-01-18  Tor Lillqvist  <tml@novell.com>

	* evolution-exchange-zip.in: New file, used to build a zipfile
	Win32 binary distribution of evolution-exchange for developers and
	beta testers.

	* configure.in
	* Makefile.am: Expand and distribute it.
	
	* configure.in: Add evolution-plugin to the EXCHANGE_STORAGE
	dependency list as it uses functions from libeutil, which is in
	evolution-plugin's .pc file.
	
2006-01-16  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange.c (open_calendar): Trying to get the
	ExchangeAccount for the URI, and if the account is not found calling
	exchange_account_connect. Folder list does not get populated, when 
	account is obtained using NULL uri, and hence loading calendar fails.
	Fixes #327305.

2006-01-16  Sushma Rai  <rsushma@novell.com>

	* storage/GNOME_Evolution_Exchange_Storage.server.in.in: Using API 
	version for DataServer BookFactory and CalFactory.

2006-01-16  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.5.5
	* NEWS : Updated

2006-01-14  Sushma Rai  <rsushma@novell.com>

	* configure.in: Define API_VERSION.

	* storage/Makefile.am: Replace @API_VERSION@

	* storage/exchange-component.h: using API_VERSION for Exchange 
	Connector book and calendar factories. 

	* storage/GNOME_Evolution_Exchange_Storage.server.in.in: Similar.
	See #323115.

2006-01-10  Simon Zheng  <simon.zheng@sun.com>

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	* storage/exchange-migrate.c (cp_r):
	(migrate_contacts):
	(exchange_migrate):
	Delete make_dir() and use the e_util_mkdir_hier() instead of it.
	
	* mail/mail-utils.c (mail_util_extract_transport_headers): Use
	e_util_strstrcase() instead of e_strstrcasea().

2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* storage/exchange-autoconfig-wizard.c:
	* storage/exchange-config-listener.h:
	* storage/exchange-delegates-control.h:
	use libedataserver/e-account-list.h instead of e-util/e-account-list.h.